Added alot of new features