@@ -1,38 +1,81 @@
 package me.geraldr12.commands;
 
-import me.geraldr12.ui.GuiManager;
+import me.geraldr12.Stonks;
 import me.geraldr12.ui.PluginGuiType;
-import me.geraldr12.utils.Messages;
-import dev.hugog.minecraft.dev_command.annotations.AutoValidation;
-import dev.hugog.minecraft.dev_command.annotations.Command;
-import dev.hugog.minecraft.dev_command.annotations.Dependencies;
-import dev.hugog.minecraft.dev_command.commands.BukkitDevCommand;
-import dev.hugog.minecraft.dev_command.commands.data.BukkitCommandData;
-import java.util.List;
+import org.bukkit.command.Command;
+import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
+import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-@AutoValidation
-@Command(alias = "", description = "mainCommand.description", permission = "blockstreet.command.main", isPlayerOnly = true)
-@Dependencies(dependencies = {Messages.class})
-@SuppressWarnings("unused")
-public class MainCommand extends BukkitDevCommand {
+import java.util.*;
+import java.util.stream.Collectors;
 
-    public MainCommand(BukkitCommandData commandData, CommandSender commandSender, String[] args) {
-        super(commandData, commandSender, args);
+public class MainCommand implements CommandExecutor, TabCompleter {
+
+    private final Stonks plugin;
+    private final Map<String, SubCommand> subCommands = new HashMap<>();
+
+    public MainCommand(Stonks plugin) {
+        this.plugin = plugin;
+        // Registering converted logic for each path
+        subCommands.put("buy", new BuyCommand(plugin));
+        subCommands.put("sell", new SellCommand(plugin));
+        subCommands.put("portfolio", new PortfolioCommand(plugin));
+        subCommands.put("companies", new CompaniesCommand(plugin));
+        subCommands.put("company", new CompanySubCommand(plugin));
+        subCommands.put("admin", new AdminSubCommand(plugin));
+        subCommands.put("reload", new ReloadCommand(plugin));
+        subCommands.put("info", new InfoCommand(plugin));
+        subCommands.put("help", new HelpCommand(plugin));
+        subCommands.put("notification", new ToggleNotificationCommand(plugin));
     }
 
     @Override
-    public void execute() {
+    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+        if (!(sender instanceof Player)) {
+            sender.sendMessage("Only players can use this command.");
+            return true;
+        }
 
-        GuiManager guiManager = getDependency(GuiManager.class);
-        guiManager.navigate((Player) getCommandSender(), PluginGuiType.COMPANIES_GUI);
+        Player player = (Player) sender;
 
+        // Base command /invest with no args opens global GUI
+        if (args.length == 0) {
+            plugin.getGuiManager().navigate(player, PluginGuiType.COMPANIES_GUI);
+            return true;
+        }
+
+        // Route to Sub-command
+        SubCommand sub = subCommands.get(args[0].toLowerCase());
+        if (sub != null) {
+            // Pass the player and the remaining arguments (omitting the sub-command name)
+            return sub.onCommand(player, Arrays.copyOfRange(args, 1, args.length));
+        }
+
+        player.sendMessage(plugin.getMessages().getPluginPrefix() + " Unknown sub-command.");
+        return true;
     }
 
     @Override
-    public List<String> onTabComplete(String[] strings) {
-        return List.of();
+    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+        if (args.length == 1) {
+            return subCommands.keySet().stream()
+                    .filter(k -> k.startsWith(args[0].toLowerCase()))
+                    .collect(Collectors.toList());
+        }
+
+        SubCommand sub = subCommands.get(args[0].toLowerCase());
+        if (sub != null) {
+            return sub.onTabComplete(sender, Arrays.copyOfRange(args, 1, args.length));
+        }
+
+        return Collections.emptyList();
     }
 
+    // This interface ensures all sub-commands have the same structure
+    public interface SubCommand {
+        boolean onCommand(Player player, String[] args);
+        List<String> onTabComplete(CommandSender sender, String[] args);
+    }
 }
